--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,9 @@
     padding: 0;
     margin: 0;
 }
-
 body {
     background-color: #d9dcd6;
 }
-
 /* all header attributes in order of the html code */
 .header {
     padding: 20px;
@@ -15,42 +13,35 @@ body {
     background-color: #2a607c;
     color: #ffffff;
 }
-
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
 .header h1 .seo {
     color: #d9dcd6;
 }
-
-.header div {
+.header section {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
+.header section ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
-p {
+article {
     font-size: 16px;
 }
-
 .hero {
     height: 800px;
     width: 100%;
@@ -59,24 +50,21 @@ p {
     background-size: cover;
     background-position: center;
 }
-
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
-/* also reordered these to be in the same order as the HTML code */
+/* reordered these to be in the same order as the HTML code */
+/* heading styles and image styles for the  section 3 individual blocks that make up the home page */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -85,21 +73,13 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 .search-engine-optimization img {
     max-height: 200px;
 }
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -108,11 +88,13 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
 .online-reputation-management img {
     max-height: 200px;
 }
-
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -121,16 +103,13 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 .social-media-marketing img {
     max-height: 200px;
 }
-
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -141,64 +120,56 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-/* reorganized to go in order of thr html code */
-
+/* reorganized to go in order of the html code */
+/* heading styles and image styles for the benefits lead section */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* heading styles and image styles for the benefits brand section */
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* heading styles and image styles for the benefits cost section */
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* footer text position and font family  */
 .footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
 .footer h2 {
     font-size: 20px;
 }
